--- a/app/templates/rentals.hbs
+++ b/app/templates/rentals.hbs
@@ -6,21 +6,7 @@
     About Us
   {{/link-to}}
 
-  {{#each model as |rental|}}
-    <article class="listing">
-        <h3>{{rental.title}}</h3>
-        <div class="detail owner">
-          <span>Owner:</span> {{rental.owner}}
-        </div>
-        <div class="detail type">
-          <span>Type:</span> {{rental.propertyType}}
-        </div>
-        <div class="detail location">
-          <span>Location:</span> {{rental.city}}
-        </div>
-        <div class="detail bedrooms">
-          <span>Number of Bedrooms:</span> {{rental.bedrooms}}
-        </div>
-    </article>
+  {{#each model as |rentalUnit|}}
+    {{rental-listing as rental=rentalUnit}}
   {{/each}}
 </div>
