--- a/app/templates/rentals.hbs
+++ b/app/templates/rentals.hbs
@@ -5,8 +5,13 @@
   {{#link-to 'about' class="button"}}
     About Us
   {{/link-to}}
-
-  {{#each model as |rentalUnit|}}
-    {{rental-listing as rental=rentalUnit}}
-  {{/each}}
+  {{#list-filter
+    filter=(action 'filterByCity')
+    as |rentals|}}
+  <ul class="results">
+    {{#each model as |rentalUnit|}}
+      <li>{{rental-listing rental=rentalUnit}}</li>
+    {{/each}}
+  </ul>
+  {{/list-filter}}
 </div>
